# zreader

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  main.py
app/api/: filter.py  health.py  process.py  stats.py  stream.py  transform.py  upload.py
app/core/: decompressor.py  filters.py  ndjson_stream.py  transformers.py  validators.py
app/services/: file_service.py  stats_service.py  stream_service.py
tests/: test_api_endpoints.py  test_decompressor.py  test_file_service.py  test_filtered_data.py  test_filters.py  test_invalid_data.py  test_ndjson_stream.py  test_stats_service.py  test_stream_service.py  test_transformer.py
tests/data/: filtered.ndjson  filtered.zst  invalid.ndjson  invalid.zst  sample.ndjson  sample.zst
