[project]
name = "zreader"
version = "1.0.0"
description = "Async NDJSON .zst processing service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "orjson==3.10.0",
    "aiofiles==23.2.1",
    "zstandard==0.22.0",
    "prometheus-client==0.20.0",
    "python-multipart==0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
